--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-native-pdf": "^6.6.2",
     "react-native-picker-select": "^8.0.4",
     "react-native-reanimated": "^1.13.2",
+    "react-native-render-html": "^6.3.4",
     "react-native-safe-area-context": "^3.1.9",
     "react-native-screens": "^2.15.0",
     "react-native-sha1": "^1.2.3",
